feat(components, widgets): split app into separate components, add widgets

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "google-streetview-pano": "GoogleWebComponents/google-streetview-pano#~1.0.2",
     "google-youtube": "GoogleWebComponents/google-youtube#~1.1.2",
     "google-feeds": "GoogleWebComponents/google-feeds#~1.0.1",
-    "google-chart": "GoogleWebComponents/google-chart#~1.0.3"
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.3",
+    "leaflet": "~0.7.5"
   },
   "devDependencies": {
     "web-component-tester": "*",
