--- a/bower.json
+++ b/bower.json
@@ -9,15 +9,15 @@
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "google-map": "GoogleWebComponents/google-map#~1.1.2",
-    "google-calendar": "GoogleWebComponents/google-calendar#~1.0.1",
-    "google-signin": "GoogleWebComponents/google-signin#~1.1.0",
-    "google-streetview-pano": "GoogleWebComponents/google-streetview-pano#~1.0.2",
     "google-youtube": "GoogleWebComponents/google-youtube#~1.1.2",
     "google-feeds": "GoogleWebComponents/google-feeds#~1.0.1",
     "google-chart": "GoogleWebComponents/google-chart#~1.0.3",
     "leaflet": "~0.7.5",
     "gold-phone-input": "PolymerElements/gold-phone-input#~1.0.6",
-    "gold-email-input": "PolymerElements/gold-email-input#~1.0.5"
+    "gold-email-input": "PolymerElements/gold-email-input#~1.0.5",
+    "todomvc-common": "~1.0.2",
+    "todomvc-app-css": "~2.0.1",
+    "iron-selector": "polymerelements/iron-selector#~1.0.5"
   },
   "devDependencies": {
     "web-component-tester": "*",
