--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Polymer Starter Kit",
-  "short_name": "Polymer Starter Kit",
+  "name": "Polymer Admin Template",
+  "short_name": "Polymer Admin Template",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128",
